<resources>
    <string name="app_name">Capture It</string>
    <string name="splashImg">Splash Activity</string>
    <string name="emailHint">Email</string>
    <string name="passHint">Password</string>
    <string name="signInButton">Sign In</string>
    <string name="registerHint">Create an account</string>
    <string name="signupButton">Sign Up</string>
    <string name="signinhint">Already have an account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_equip">Equipment</string>
    <string name="title_more">More</string>
    <string name="title_maps">Near Me</string>
    <string name="title_activity_maps">Map</string>
    <string name="apiKey">AIzaSyDu3z-QffLCQhjBuG2No9xtvihka4QQlVY</string>

    <string-array name="location">
        <item>Vancouver</item>
        <item>Richmond</item>
        <item>Surrey</item>
        <item>Burnaby</item>
        <item>Langley</item>
    </string-array>

    <string-array name="experience">
        <item>Less than 1 year</item>
        <item>1-3 years</item>
        <item>3-5 years</item>
        <item>More than 5 years</item>

    </string-array>
</resources>
